@@ -31,7 +31,7 @@ public interface NavigationRendererAttributes
     extends CommonRendererAttributes,
             KeyBundleAttributes
 {
-    public static final String LEVEL_CLASSES = "levelClasses";
+    //public static final String LEVEL_CLASSES = "levelClasses";
     public static final String OPEN_ITEM_CLASS_ATTR = "openItemClass";
     public static final String ACTIVE_ITEM_CLASS_ATTR = "activeItemClass";
     public static final String ITEM_CLASS_ATTR = "itemClass";
@@ -40,7 +40,7 @@ public interface NavigationRendererAttributes
     public static final String[] NAVIGATION_ATTRIBUTES = {
         PANEL_CLASS_ATTR,
         BUNDLE_ATTR,
-        LEVEL_CLASSES,
+        //LEVEL_CLASSES,
         OPEN_ITEM_CLASS_ATTR,
         ACTIVE_ITEM_CLASS_ATTR,
         ITEM_CLASS_ATTR,
