@@ -13,7 +13,8 @@ Changes in Release 0.4.2
 * getValidator() in ApplicationImpl returned always the same validator
   instance: fixed.
 * Support for converter attributes "dateStyle", "formatPattern", etc.
-* added Attribute activeItemClass to NavigationTag
+* added Attribute activeItemClass to NavigationTag, removed Attribute levelClasses from NavigationTag
+  see NavigationRenderer.indent(...)
 * refurbished navigation menu in examples application
 * replaced all usages of Class.forName(s) by Class.forName(s, true,
   Thread.currentThread().getContextClassLoader()) to (hopefully) resolve the
